tests/integration/snapshots/integration__conformance__n_structure_object_with_comment.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{"a":/*comment*/"b"}
stdout ---

stderr ---
error: unexpected character `/`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a":/*comment*/"b"}
  |      ^
