tests/integration/snapshots/integration__conformance__n_structure_object_with_comment.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{"a":/*comment*/"b"}
stderr ---
error: unexpected character `/`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a":/*comment*/"b"}
  |      ^
