tests/integration/snapshots/integration__conformance__n_structure_single_eacute.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [233]
stdout ---

stderr ---
error: unfinished multi-byte sequence
 --> stdin:1:1
  |
1 | �
  | ^
